src/test/ui/parser/issue-14303-fncall.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-fncall.rs:4:31
   |
LL |     .collect::<Vec<'a, usize, 'b>>()
   |                               ^^ must be declared prior to type parameters

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-14303-fncall.rs:4:20
   |
LL |     .collect::<Vec<'a, usize, 'b>>()
   |                    ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/issue-14303-fncall.rs:4:31
   |
LL |     .collect::<Vec<'a, usize, 'b>>()
   |                               ^^ undeclared lifetime

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
